<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnslAuthorization"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivAuthorizationLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:padding="26dp"
        android:scaleType="centerInside"
        android:transitionName="@string/splash_transition"
        app:layout_constraintBottom_toTopOf="@id/cmbAuthorizationRegion"
        app:srcCompat="@drawable/drawable_logo"
        tools:ignore="UnusedAttribute" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/cmbAuthorizationRegion"
        style="@style/LayoutStyle_Base"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tilAuthorizationRealm" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAuthorizationRealm"
        style="@style/LayoutStyle_Base"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etAuthorizationRealm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authorization_realm"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAuthorizationCharacter"
        style="@style/LayoutStyle_Base"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintTop_toBottomOf="@+id/tilAuthorizationRealm">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etAuthorizationCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authorization_character"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAuthorizationShow"
        style="@style/LayoutStyle_Button"
        android:layout_marginTop="8dp"
        android:text="@string/authorization_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAuthorizationCharacter" />

    <ProgressBar
        android:id="@+id/pbAuthorization"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAuthorizationCharacter" />

</android.support.constraint.ConstraintLayout>