<resources>
    <string name="app_name">WowMount</string>

    <string name="splash_transition">splash_transition</string>

    <string name="error_character_io">Can\'t update mounts list, server error</string>
    <string name="error_character_no_internet">Can\'t update mounts list, no internet</string>
    <string name="error_character_application">Can\'t update mounts list, application error</string>
    <string name="error_authorized">Authorization error, please authorize again</string>

    <string name="authorization_realm">Realm</string>
    <string name="authorization_character">Character name</string>
    <string-array name="authorization_servers">
        <item>eu</item>
        <item>us</item>
    </string-array>
    <string name="authorization_login">Show mounts</string>
    <string name="authorization_error_empty_server">Empty server</string>
    <string name="authorization_error_empty_realm">Empty realm name</string>
    <string name="authorization_error_empty_character_name">Empty character name</string>

    <string name="mounts_menu_logout">Logout</string>
    <string name="mounts_menu_about">About</string>
    <string name="mounts_menu_filter">Filter</string>
    <string-array name="mounts_groups">
        <item>All</item>
        <item>Ground</item>
        <item>Flying</item>
        <item>Aquatic</item>
    </string-array>
    <string name="mounts_logout_error">Can\'t logout</string>

    <string name="mount_back">Back</string>

    <string name="about_title">About</string>
    <string name="about_version">Application version: %s</string>
    <string name="about_author">Author: Akhmarov Vadim (%s)</string>
    <string name="about_author_email">Vadim.akhmarov@gmail.com</string>
    <string name="about_code">Code source:\n</string>
    <string name="about_code_url">https://github.com/Riningan/WowMount</string>
    <string name="about_back">Back</string>

    <string name="filter_title">Filter</string>
    <string name="filter_show_all">Show all mounts</string>
    <string name="filter_show_with_count">Show %d</string>
    <string name="filter_show_without_count">Show</string>
    <string name="filter_back">Back</string>
</resources>