<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnslFilter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tlbFilter"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/filter_back"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/filter_title" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cbFilterShowAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_left"
        android:layout_marginLeft="@dimen/base_margin_left"
        android:layout_marginTop="@dimen/base_margin_top"
        android:layout_marginEnd="@dimen/base_margin_right"
        android:layout_marginRight="@dimen/base_margin_right"
        android:text="@string/filter_show_all"
        android:textAppearance="@style/TextAppearance.MountName"
        app:layout_constraintTop_toBottomOf="@+id/tlbFilter" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnFilterShow"
        style="@style/LayoutStyle_Button"
        android:layout_marginBottom="16dp"
        android:text="@string/filter_show_with_count"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/pbFilter"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>